styles/_typography.scss
@font-face {
	font-family: "hk_grotesk";
	src: url("/assets/fonts/hk-grotesk/hkgrotesk-semibold.woff2")
			format("woff2"),
		url("/assets/fonts/hk-grotesk/hkgrotesk-semibold.woff") format("woff");
	font-weight: bold;
	font-style: normal;
	font-display: swap;
}

@font-face {
	font-family: "hk_grotesk";
	src: url("/assets/fonts/hk-grotesk/hkgrotesk-italic.woff2") format("woff2"),
		url("/assets/fonts/hk-grotesk/hkgrotesk-italic.woff") format("woff");
	font-weight: normal;
	font-style: italic;
	font-display: swap;
}

@font-face {
	font-family: "hk_grotesk";
	src: url("/assets/fonts/hk-grotesk/hkgrotesk-regular.woff2") format("woff2"),
		url("/assets/fonts/hk-grotesk/hkgrotesk-regular.woff") format("woff");
	font-weight: normal;
	font-style: normal;
	font-display: swap;
}

::selection {
	background: rgb(255, 231, 185);
}

* {
	font-family: "hk_grotesk", sans-serif;
	overscroll-behavior: none;
}

code {
	font-family: "Inconsolata", monospace;
	font-size: inherit;
}

p > code {
	background: #f5f5f5;
	padding: 0.18em 0.4em;
	font-size: 0.9em;
}

span {
	font-family: inherit;
	font-size: inherit;
	font-weight: inherit;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	font-family: "Manrope", sans-serif;
	font-weight: 700;
	color: #222222;
}

h1 {
	font-size: max(32px, min(4.2vw, 42px));
	line-height: 1.6em;
	padding-bottom: 0.6em;
}

h2 {
	font-size: max(24px, min(3.2vw, 32px));
	line-height: 1.6em;
	margin-top: 1.4em;
	padding-bottom: 0.4em;
}

h3 {
	font-size: max(18px, min(2.4vw, 24px));
	line-height: 1.6em;
	margin-top: 1.4em;
	padding-bottom: 0.4em;
}

h4 {
	font-size: max(18px, min(2vw, 22px));
	letter-spacing: -0.02em;
	line-height: 1.4em;
	font-weight: 400;
}

p,
ul,
ol,
.notion-checkbox {
	font-size: max(16px, min(1.8vw, 18px));
	font-weight: 300;
	line-height: 1.6em;
	color: #333333;
	letter-spacing: -0.01em;
	font-feature-settings: "salt" on;
}

p {
	padding-bottom: 1.2em;
}
li {
	font-size: inherit;
}

li > span {
	font-size: inherit;
}

pre {
	background: #f5f5f5 !important;
	padding: 1rem 2rem !important;
	font-size: 16px;
	line-height: 1.4em;
	overflow-x: scroll;
	color: #333333;
	tab-size: 4;
	border-radius: 4px;
	margin-top: 3rem;
	margin-bottom: 2rem;
}

ul,
ol {
	padding-left: 2rem;
}

ul > li,
ol > li {
	margin-bottom: 0.4em;
}

ol > ol,
ul > ol {
	padding-left: 2rem;
	list-style: lower-latin;
}

ul {
	list-style: disc;
}
ol {
	list-style: decimal;
}
ul + *:not(ul),
ol + *:not(ol) {
	margin-top: 2em;
}

